<resources>
    <string name="app_name">Darasa Lecturer</string>
    <string name="content_decription">Default content description</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="already_have_account">Already have account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="dot">&#8226;</string>
    <string name="venue">Venue</string>
    <string name="percentage_sample">70%</string>
    <string name="satisfaction">Satisfaction</string>
    <string name="location_icon">location icon</string>
    <string name="record_attendance">Record Attendance</string>
    <string name="pin_screen">Pin Screen</string>
    <string name="manage_your_password"><b>Manage your password</b> \n Set up pin used to control access</string>
    <string name="content_desc_icon">password icon</string>
    <string name="manage_account">Manage Account</string>
    <string name="manage_your_account">Manage your Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_pin_4_digits">Enter a passcode of 4 digits</string>
    <string name="enter_your_pin">Enter passcode to end class</string>
    <string name="loc_title">Location</string>

    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="permission_rationale_location">Darasa would like to know your location</string>
    <string name="permission_location_denied_explanation">You have not granted location permission to Darasa</string>
    <string name="location">Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_attendee">Add Attendee(s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Lecturer Registration</string>
    <string name="save">Save</string>
    <string name="school">School</string>
    <string name="last_name">Last name</string>
    <string name="first_name">first name</string>
    <string name="add_class_text">It\'s now easy to add or edit  \n your lectures.</string>
    <string name="manage_your_classes">Manage your classes</string>
    <string name="unit_name">Unit name</string>
    <string name="unit_code">Unit code</string>
    <string name="lecture_time">Lecture time</string>
    <string name="department">Department</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="academy_year">Academic year i.e 2018/19</string>
    <string name="time_of_lecture">Select time of lecture</string>
    <string name="finish">Finish</string>

    <string name="no_class_text">You\'ve no classes today. Take \na second to recharge</string>
    <string name="no_students_text">You\'ve no students showing. Update \nthe current semester in <u>settings</u> \n and hit save</string>
    <string name="email_us">Email us</string>
    <string name="huh_no_classes">Huh! No Classes</string>
    <string name="huh_no_students">Huh! No Students</string>
    <string name="set_current_semester">Set current semester</string>
    <string name="select">Select</string>
    <string name="select_course">Select course(s)</string>
    <string name="select_class_delete">Select a class to delete</string>

    <string name="dev_email">developer.getabujob@gmai.com</string>
    <string name="dev_subject">Support Darasa Lecturer App</string>
    <string name="save_class">Save Class</string>

    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="youre_offline">You\'re offline</string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <string name="chooseEmailClient">Check Email</string>
    <string name="for_studs_unable">For Students unable to scan Qr</string>
    <string name="confirm_attendance">Confirm Attendance</string>
    <string name="you_set">You\'re all set</string>
    <string name="delete">DELETE</string>
    <string name="dismiss">DISMISS</string>
    <string name="select_studyyear_text">Click the year of study for the\n course(s) that you teach to change</string>
    <string name="course">Course</string>
    <string name="start_scan">Start\nScan</string>
    <string name="scan_class">scanning\nClass</string>
    <string name="this_create_qr_txt">This will create a <b>QR CODE</b> for students \nthat attend this lesson to scan</string>
    <string name="create_qr">Create QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="title_scan">Still Scanning</string>
    <string name="title_scan_txt">You\'re still scanning for students in the class room</string>
    <string name="title_scan_quite">Quite this class</string>

    <string name="fin_scan">Still Scanning</string>
    <string name="fin_scan_txt">You\'re still scanning for students in the class room</string>
    <string name="fin_scan_quite">Quite this class</string>

    <string name="start_scanning_for_students_txt">Tap Start Scan to\nStart scanning for students inside the classroom</string>
    <string name="network_scanning_for_students">Detecting active internet</string>
    <string name="netlost_scanning_for_students_txt">Tap Retry to\nscan for students inside the classroom</string>
    <string name="scanning_for_students_txt">Scanning for students inside the classroom</string>
    <string name="checking_for_students_txt">Detecting students inside the classroom</string>

    <string name="net_needed">Internet required inorder to broadcast lesson in the classroom</string>

    <array name="addclass_steps">
        <item>Intro</item>
        <item>Unit</item>
        <item>Venue</item>
        <item>Course(s)</item>
        <item>Done</item>
    </array>

    <array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </array>

    <array name="studyyear">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </array>


    <array name="demo_courses">
        <item>Bs of Commerce</item>
        <item>Bs of Purchasing Supplies and Management</item>
        <item>Bs of Business Administration and Management</item>
        <item>Bs of Science in Criminology and Security Management</item>
        <item>Bs of Science in Information Technology</item>
        <item>Bs. Food Science</item>
        <item>Bs of Science in Computer Science</item>
        <item>Bs in Business Information Technology</item>
        <item>Bs of Science Electrical and Electronics Engineering</item>
        <item>Bs of Science Mechatronic Engineering</item>
    </array>


</resources>
