<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeActivity"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_decription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_bg" />

    <android.support.design.button.MaterialButton
        android:id="@+id/login_positive"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorAccent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/already_have_account"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/login_negative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#AA3816" />

    <android.support.design.button.MaterialButton
        android:id="@+id/login_negative"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/white"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#AAAAAA" />

</android.support.constraint.ConstraintLayout>