<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.newlesson.StepUnitFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/step_unit_unitname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit_name"
                    android:inputType="textAutoComplete"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/step_unit_unitcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit_code"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/step_unit__day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:entries="@array/days"
                android:padding="8dp"
                android:tooltipText="Lecture day" />

            <android.support.design.button.MaterialButton
                android:id="@+id/step_unit_time_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="42dp"
                android:background="@color/material_blue_grey_80"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/time_of_lecture"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/darkgreyish"
                android:textSize="18sp"
                app:additionalPaddingLeftForIcon="16dp"
                app:additionalPaddingRightForIcon="16dp"
                app:backgroundTint="@color/contentDividerLine"
                app:icon="@drawable/ic_time"
                app:iconTint="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/step_unit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="42dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lecture_time"
                    android:inputType="time"
                    android:singleLine="true"
                    android:focusable="false"
                    android:enabled="true"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="42dp"
        >

    <!-- request button -->
        <TextView
            android:id="@+id/step_unit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/step_unit_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            />
    </LinearLayout>

</RelativeLayout>